# memory_fs

./: README.ipynb  README.md  pyproject.toml
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/memory_fs/: directory.py  exceptions.py  file.py  file_content.py  file_contents.py  fs_object.py  memory_fs.py  memory_space.py
src/memory_fs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/memory_fs/: test_memory_fs.py
